finished first part

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,6 +18,26 @@
 	url = {https://cyberleninka.ru/article/n/klassifikatsiya-ugroz-v-sistemah-upravleniya-bazami-dannyh/viewer}
 }
 
+@article{Mysev2019,
+	author = {Мысев Алексей Эдуардович, Морозов Николай Владимирович},
+	journal = {Отечественная юриспруденция},
+	number = {3},
+	year = {2019},
+	pages = {51--55},
+	title = {{Правовое регулирование информационной безопасности в Российской Федерации}},
+	url = {https://cyberleninka.ru/article/n/pravovoe-regulirovanie-informatsionnoy-bezopasnosti-v-rossiyskoy-federatsii}
+}
+
+@book{Smirnov2007,
+	author    = {Смирнов}, 
+	title     = {{Безопасность систем баз данных}},
+	publisher = {Гелиос АРВ},
+	year      = 2007,
+	isbn      = {9785854381635},
+	url = {https://www.twirpx.com/file/1706071/}
+}
+
+
 @online{Lihonosov2011,
     author = {{Лихоносов А. Г.}},
     title = {{Интернет-курс по дисциплине Безопасность баз данных}},
