--- a/part/concept.tex
+++ b/part/concept.tex
@@ -25,7 +25,7 @@
 	\item технические спецификации, регламентирующие различные аспекты реализации средств защиты
 \end{itemize} 
 
-Попытка защищать все и сразу обречена на провал, так что довольно логичным кажется сосредоточится на обеспечении безопасности четырех уровней информационной системы \autocite{Lihonosov2011}:
+Попытка защищать все и сразу обречена на провал, так что довольно логичным кажется сосредоточится на обеспечении безопасности четырех уровней информационной системы \autocite{Lihonosov2011}~\label{pon:urov}:
 \begin{enumerate}
 	\item уровня прикладного программного обеспечения, отвечающего за взаимодействие с пользователем
 	\item уровня системы управления базами данных, обеспечивающего хранение и обработку данных информационной системы
@@ -70,7 +70,7 @@
 Внешними дестабилизирующими факторами, создающими угрозы безопасности функционированию систем баз данных и СУБД, являются:
 \begin{itemize}
 	\item умышленные, деструктивные действия лиц с целью искажения, уничтожения или хищения программ, данных и документов системы, причиной которых являются нарушения информационной безопасности защищаемого объекта
-	\item искажения в каналах передачи информации, поступающей от внешних источников, циркулирующих в системе и передаваемой потребителям, а также недопустимые значения и изменения характеристик потоков информации из внешней среды и внутри системы
+	\item искажения в каналах передачи информации, поступающей от внешних источников, циркулирующих в системе и передаваемой потребителям, а также недопустимые значения и изменения характеристик потоков информации из внешней среды и внутри системы~\label{pon:pot}
 	\item сбои и отказы в аппаратуре вычислительных средств
 	\item вирусы и иные деструктивные программные элементы, распространяемые с использованием систем телекоммуникаций, обеспечивающих связь с внешней средой или внутренние коммуникации распределенной системы баз данных
 	\item изменения состава и конфигурации комплекса взаимодействующей аппаратуры системы за пределы, проверенные при тестировании или сертификации системы
@@ -84,7 +84,7 @@
 	\item недостаточная эффективность используемых методов и средств обеспечения информационной безопасности в штатных или особых условиях эксплуатации системы
 \end{itemize}
 
-Если у вас разбегаются глаза, это нормально -- здесь перечислены атаки на всех уровнях. Что за уровни? Напоминаю:
+Если у вас разбегаются глаза, это нормально -- здесь перечислены атаки на всех уровнях~\label{pon:urovs}. Что за уровни? Напоминаю:
 \begin{itemize}
 	\item На уровне сети
 	\begin{itemize}
@@ -148,7 +148,7 @@
 
 Теперь спускаемся на уровень самой БД. Для простоты восприятия разобьем все кучкам угроз конфиденциальности, целостности и доступности(Опять же, согласно \autocite{Ytebov2008}):
 \begin{itemize}
-	\item К угрозам конфиденциальности информации можно отнести следующие:
+	\item К угрозам конфиденциальности информации можно отнести следующие~\label{ygr:conf}:
 	\begin{enumerate}
 		\item Инъекция SQL. Во многих приложениях используется динамический SQL -- формирование SQL-предложений кодом программы путем конкатенации строк и значений параметров. Зная структуру базы данных, злоумышленник может либо выполнить хранимую программу в запросе, либо закомментировать <<легальные>> фрагменты SQL-кода, внедрив, например, конструкцию UNION, запрос которой возвращает конфиденциальные данные. В последнее время злоумышленник может использовать специальные программы, автоматизирующие процесс реализации подобных угроз.
 		
@@ -158,7 +158,7 @@
 		
 		\item Использование оператора UPDATE для получения конфиденциальной информации. В некоторых стандартах SQL пользователь, не обладая привилегией на выполнение оператора SELECT, мог выполнить оператор UPDATE со сложным логическим условием. Так как после выполнения оператора UPDATE сообщается, сколько строк он обработал, фактически пользователь мог узнать, существуют ли данные, удовлетворяющие этому условию.
 	\end{enumerate}
-	\item К угрозам  целостности информации, специфические для СУБД можно отнести следующие:
+	\item К угрозам  целостности информации, специфические для СУБД можно отнести следующие~\label{ygr:cel}:
 	\begin{enumerate}
 		\item С помощью SQL-операторов UPDATE, INSERT и DELETE можно изменить данные в СУБД. Опасность заключается в том, что пользователь, обладающий соответствующими привилегиями, может модифицировать все записи в таблице.
 	\end{enumerate}
@@ -185,75 +185,199 @@
 	\item Безопасная организация и работа с данными. Вопрос организации данных и управления ими является ключевым в системах хранения информации. В эту область входят задачи организации данных с контролем целостности и другие, специфичные для СУБД проблемы безопасности. Фактически эта задача включает в себя основной объем зависящих от данных уязвимостей и защиты от них
 \end{itemize}
 
-Но по хорошему надо добавить юр говна
-\subsubsection{Защита от несанкционированного доступа}\footnote{Прошлый год}
-%К основным средствам защиты информации относят следующие:
-%\begin{itemize}
-%	\item идентификация и аутентификации
-%	\item установление прав доступа к объектам БД
-%	\item защита полей и записей таблиц БД
-%	\item шифрование данных и программ
-%\end{itemize}
-%
-%Простейший пример аутентификации это парольная защита. Парольная защита представляет простой и эффективный способ защиты БД от несанкционированного доступа. Пароли устанавлюваются конечным пользователями или администраторами БД и хранятся в определенных системных файлах СУБД в зашифрованном виде. Улучшенным вариантом является использование механизма SSL-аутентификации с использованием сертификатов.
-%
-%В целях контроля использования основных ресурсов СУБД во многих системах имеются средства установления прав доступа к объектам БД. Права доступа определяют возможные действия над объектами. Владелец объекта, а также администратор БД имеют все права. Остальные пользователи к разным объектам могут иметь различные уровни доступа.
-%
-%К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение). Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
-%
-%Итак, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических защитных мер, в первую очередь: введение ролевого управления доступа, организация доступа пользователей по предъявлению сертификата, выборочное шифрование для сегментов базы данных.
+Но настало время отставить логику в сторону и поговорить \sout{на эльфийском} о юридических требованиях. В целом, в России пытаются регламентировать эту отрасль, но в основном это басни про <<кругом враги>>, <<безопасная безопасность>> и <<импортозамещать до потери пульса>>. Даже <<вертикаль власти>> не забыли [\autocite{Mysev2019}].\footnote{Если очень хочется, то можно преисполниться вот \href{https://publications.hse.ru/mirror/pubs/share/folder/ie7oj6cz00/direct/202314863}{этой монографией}}
 
-\subsubsection{Защита от вывода}\footnote{Взял href{http://www.e-biblio.ru/book/bib/01\_informatika/b\_baz\_dan/sg.html}{здесь}}
-%
-%Логический вывод на основе функциональных зависимостей. Пусть дана схема отношения: $R(A_1, \ldots, A_n)$. Пусть $U = (A_1, \ldots, A_n)$, $X$, $Y$ -- подмножества из $U$. Говорят, что Х функционально определяет Y, если в любом отношении $r$ со схемой $R(A_1, \ldots, A_n)$ не могут содержаться два кортежа с одинаковыми значениями атрибутов из Х, с различными из Y. В этом случае имеет место функциональная зависимость, обозначаемая . Пример функциональной зависимости для схемы отношения (фамилия, имя, отчество, должность, зарплата): если должность = менеджер, то зарплата = $1200$. В реальных базах данных при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение.
-%
-%Логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных (РМД) можно задать ограничения целостности — логические условия, которым должны удовлетворять атрибуты кортежей. Причем ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменения данных в таблице, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Выполняя многократные изменения данных и анализируя реакцию системы, злоумышленник может получить те сведения, к которым у него отсутствует непосредственный доступ. Также к этому виду угроз конфиденциальности относится анализ значений первичных/внешних ключей.
-%
+Для беглого ознакомления достаточно заглянуть в 
+\href{http://www.consultant.ru/document/cons_doc_LAW_61798/0e9ec16b786dcbdaaa7f44abfc4a15e601d5be22/#dst100144}{ФЗ <<Об информации, информационных технологиях и о защите информации>>} и в \href{http://www.consultant.ru/document/cons_doc_LAW_75586/#dst0}{Указ президента <<О мерах по обеспечению информационной безопасности Российской Федерации при использовании информационно-телекоммуникационных сетей международного информационного обмена>>}. Хоть что-то более-менее содержательное начинается с \href{https://fstec.ru/en/288-tekhnicheskaya-zashchita-informatsii/obespechenie-bezopasnosti-kriticheskoj-informatsionnoj-infrastruktury/prikazy/1702-prikaz-fstek-rossii-ot-14-marta-2014-g-n-32}{требований ФСТЭК}. 
+
+Итак, согласно ФСТЭКу автоматизированная система управления, имеет многоуровневую структуру~\label{pon:bez}:
+\begin{enumerate}
+	\item уровень операторского (диспетчерского) управления (верхний уровень)
+	\item уровень автоматического управления (средний уровень)
+	\item уровень ввода (вывода) данных исполнительных устройств (нижний (полевой) уровень)
+\end{enumerate}
+
+В автоматизированной системе управления объектами защиты являются:
+\begin{enumerate}
+	\item информация (данные) о параметрах (состоянии) управляемого (контролируемого) объекта или процесса
+	\item программно-технический комплекс, включающий технические средства, программное обеспечение, а также средства защиты информации
+\end{enumerate}
+\begin{grayquote}
+	Принимаемые организационные и технические меры защиты информации:
+	\begin{itemize}
+		\item должны обеспечивать доступность обрабатываемой в автоматизированной системе управления информации (исключение неправомерного блокирования информации), ее целостность (исключение неправомерного уничтожения, модифицирования информации), а также, при необходимости, конфиденциальность (исключение неправомерного доступа, копирования, предоставления или распространения информации)
+		
+		\item должны соотноситься с мерами по промышленной, физической, пожарной, экологической, радиационной безопасности, иными мерами по обеспечению безопасности автоматизированной системы управления и управляемого (контролируемого) объекта и (или) процесса
+		
+		\item не должны оказывать отрицательного влияния на штатный режим функционирования автоматизированной системы управления.
+	\end{itemize}
+\end{grayquote}
+
+\begin{grayquote}
+	Организационные и технические меры защиты информации, реализуемые в автоматизированной системе управления в рамках ее системы защиты, в зависимости от класса защищенности, угроз безопасности информации, используемых технологий и структурно-функциональных характеристик автоматизированной системы управления и особенностей ее функционирования должны обеспечивать:
+	\begin{itemize}
+		\item идентификацию и аутентификацию (ИАФ)
+		\item управление доступом (УПД)
+		\item ограничение программной среды (ОПС)
+		\item защиту машинных носителей информации (ЗНИ)
+		\item аудит безопасности (АУД)
+		\item антивирусную защиту (АВЗ)
+		\item предотвращение вторжений (компьютерных атак) (СОВ)
+		\item обеспечение целостности (ОЦЛ)
+		\item обеспечение доступности (ОДТ)
+		\item защиту технических средств и систем (ЗТС)
+		\item защиту информационной (автоматизированной) системы и ее компонентов (ЗИС)
+		\item реагирование на компьютерные инциденты (ИНЦ)
+		\item управление конфигурацией (УКФ)
+		\item управление обновлениями программного обеспечения (ОПО)
+		\item планирование мероприятий по обеспечению безопасности (ПЛН)
+		\item обеспечение действий в нештатных ситуациях (ДНС)
+		\item информирование и обучение персонала (ИПО)
+	\end{itemize}
+\end{grayquote}
+
+Для разнообразия можно ознакомиться с положением дел в Беларуси. Там есть вот такие прикольные законы\footnote{А это взято с \href{http://www.bseu.by/it/tohod/lekcii9_2.htm}{лекций по администрированию баз данных}}:
+\begin{itemize}
+	\item Об информатизации
+	\item О научно-технической информации;
+	\item О национальном архивном фонде и архивах в Республике Беларусь
+	\item О печати и других средствах массовой информации
+	\item О правовой охране программ для ЭВМ и баз данных
+	\item О введении в действие Единой системы классификации и кодирования технико-
+	экономической и социальной информации Республики Беларусь
+	\item и др.
+\end{itemize}
+
+\subsubsection{Защита от несанкционированного доступа}
+Когда мы начинаем говорить о безопасности бд, в первую очередь в голову приходит мысль, что не плохо было бы подумать о конфиденциальности (а уже потом про доступность и тд.). С нее и начнем.
+
+К основным средствам защиты информации относят следующие\footnote{За оригиналом \href{https://refdb.ru/look/2755914.html}{сюда}}:
+\begin{itemize}
+	\item идентификация и аутентификации
+	\item установление прав доступа к объектам БД
+	\item защита полей и записей таблиц БД
+	\item шифрование данных и программ
+\end{itemize}
+
+Простейший пример аутентификации это парольная защита. Парольная защита представляет простой и эффективный способ защиты БД от несанкционированного доступа. Пароли устанавлюваются конечным пользователями или администраторами БД и хранятся в определенных системных файлах СУБД в зашифрованном виде. Улучшенным вариантом является использование механизма SSL-аутентификации с использованием сертификатов.
+
+В целях контроля использования основных ресурсов СУБД во многих системах имеются средства установления прав доступа к объектам БД. Права доступа определяют возможные действия над объектами. Владелец объекта, а также администратор БД имеют все права. Остальные пользователи к разным объектам могут иметь различные уровни доступа.
+
+К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение). Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
+
+Итак, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических защитных мер, в первую очередь: введение ролевого управления доступа, организация доступа пользователей по предъявлению сертификата, выборочное шифрование для сегментов базы данных.
+
+\subsubsection{Защита от вывода}
+Мы уже говорили об этом в угрозах безопасности \ref{ugr:conf} на \pageref{ugr:conf} странице. У \autocite{Ytebov2008} есть только объяснение логического вывода на основе функциональных зависимостей или ограничений целостности, а за решением нас посылают в \autocite{Smirnov2007}. О! Я тут неожиданно понял что все, что я находил в интернете, в статьях и других книгах это копипаста различной степени наглости из \autocite{Smirnov2007}. Так что не буду отличаться оригинальностью и я. Помимо очевидного мониторинга с целью свести количество таких связей к минимуму, надо очень внимательно следить за привилегиями (принцип минимальных привилегий).
+\begin{grayquote}
+	Привилегия -- это разрешение на выполнение в системе определенного действия. Не имея соответствующей привилегии, пользователь не может получить доступ к данным или выполнить какое-либо действие.
+\end{grayquote}
+
+Все привилегии могут быть разделены на два класса: системные привилегии и привилегии доступа к объектам.
+
+\begin{grayquote}
+	Системная привилегия -- это привилегия, которая дает пользователю право на выполнение какой-либо операции в масштабе базы данных. Например, пользователь с системной привилегией ALTER TABLESPACE может изменять любую табличную область (за исключением некоторых ограничений на табличную область SYSTEM).
+	
+	Привилегия доступа к объекту -- это разрешение пользователю на выполнение определенной операции над определенным объектом, например выполнение выборки из некоторой таблицы.
+	При этом пользователь может формировать любые запросы к данной таблице, но не имеет права модифицировать данные этой таблицы или формировать какой-либо запрос к другой таблице.
+\end{grayquote}
+
 \subsubsection{Целостность БД}
-%Целостность базы данных -- соответствие имеющейся в базе данных информации её внутренней логике, структуре и всем явно заданным правилам. Каждое правило, налагающее некоторое ограничение на возможное состояние базы данных, называется ограничением целостности.
-%
-%Очевидно, что ограничения должны быть формально объявлены для СУБД, после чего СУБД должна предписывать их выполнение. Объявление ограничений сводится просто к использованию соответствующих средств языка базы данных, а соблюдение ограничений осуществляется с помощью контроля со стороны СУБД над операциями обновления, которые могут нарушить эти ограничения, и запрещения тех операций, которые их действительно нарушают. При первоначальном объявлении ограничения система должна проверить, удовлетворяет ли ему в настоящий момент база данных. Если это условие не соблюдается, ограничение должно быть отвергнуто; в противном случае оно принимается (то есть записывается в каталог системы) и начиная с этого момента соблюдается.
-%
-%В теории реляционных баз данных принято выделять четыре типа ограничений целостности:
-%\begin{itemize}
-%	\item Ограничением базы данных называется ограничение на значения, которые разрешено принимать указанной базе данных.
-%	\item Ограничением переменной отношения называется ограничение на значения, которые разрешено принимать указанной переменной отношения.
-%	\item Ограничением атрибута называется ограничение на значения, которые разрешено принимать указанному атрибуту.
-%	\item Ограничение типа представляет собой не что иное, как определение множества значений, из которых состоит данный тип.\footnote{Подробнее про ограничения: https://studfiles.net/preview/6354061/page:55/ (Блядский роскомнадзор будет ругаться, но вас это пугать не должно)}
-%\end{itemize}
-%
+Когда мы говорили о защите от НСД, речь шла о конфиденциальности. Теперь настало время целостности. 
+
+По \autocite{Smirnov2007}:
+\begin{grayquote}
+	Задача обеспечения целостности предусматривает комплекс мер по предотвращению непреднамеренного изменения или унич­тожения информации, используемой информационной системой управления или системой поддержки принятия решений. Изменение или уничтожение данных может быть следствием неблагоприятного стечения обстоятельств и состояния внешней среды (стихийные бедствия, пожары и т. п.), неадекватных действий пользователей (ошибки при вводе данных, ошибки операторов и т. п.) и проблем, возникающих при многопользовательской обработке данных.
+	
+	Угроза нарушения целостности включает в себя любое умыш­ленное или случайное изменение информации, обрабатываемой в информационной системе или вводимой из первичного источника
+	данных. К нарушению целостности данных может привести как преднамеренное деструктивное действие некоторого лица, изменяющего данные для достижения собственных целей, так и
+	случайная ошибка программного или аппаратного обеспечения, приведшая к безвозвратному разрушению данных.
+\end{grayquote}
+
+Мы уже обсуждали основные угрозы целостности в \ref{ugr:cel} на \pageref{ugr:cel}.
+
+Средства обеспечения целостности баз данных включают автоматическую поддержку некоторой системы правил, описывающих допустимость и достоверность хранимых и вводимых значений. Реляционная модель включает некоторые характерные правила, вытекающие из существа модели: ограничения домена и ограничения таблицы.
+\begin{itemize}
+	\item Целостность домена предполагает, что допустимое множество значений каждого атрибута является формально определенным. То есть существуют формальные способы проверки того, что конкретное значение атрибута в базе данных является допустимым. Строка не будет вставлена в таблицу, пока каждое из значений ее столбцов не будет находиться в соответствующем домене (множестве допустимых значений).
+	\item Целостность таблицы означает, что каждая строка в таблице	должна быть уникальной. Хотя не все СУБД промышленного уровня требуют выполнения такого ограничения, возможность уникальной идентификации каждой строки представляется необходимой для большинства реальных приложений.
+\end{itemize}
+
+Ограничения целостности позволяют гарантировать, что требования к данным будут соблюдаться независимо от способа их загрузки или изменения. В большинстве СУБД предусмотрена поддержка следующих типов статических ограничений целостности\footnote{Немного другая точка зрения: https://studfiles.net/preview/6354061/page:55/ (Роскомнадзор будет ругаться, но вас это пугать не должно)}:
+\begin{enumerate}
+	\item ограничение на определенность значения атрибута (NOT NULL)
+	\item ограничение на уникальность значения атрибутов (UNIQUE)
+	\item ограничение -- первичный ключ
+	\item ограничение -- внешний ключ
+	\item ограничение целостности, задаваемое предикатом
+\end{enumerate}
+
 \subsubsection{Аудит}
-%Важнейшей составляющей процесса обеспечения безопасности ИС является проведение квалифицированного аудита. Несмотря на то, что подготовка и проведение профессионального аудита безопасности ИС требует существенных финансовых и кадровых затрат, высшее руководство многих организаций считает подобные затраты оправданными.
-%
-%Проведение профессионального независимого аудита позволяет своевременно выявить существующие недостатки в системе обеспечения безопасности ИС и объективно оценить соответствие параметров, характеризующих режим обеспечения информационной безопасности, требуемому решаемыми задачами организации уровню.
-%
-%Ядром построения ИС предприятия является СУБД промышленного уровня, Полноценная система обеспечения безопаности ИС должна обладать развитыми средствами аудита, то есть, как минимум, СУБД должна обладать средствами автоматического ведения протоколов действий пользователей системы.
-%
-%В СУБД средство ведения аудита может быть реализовано в виде независимой утилиты (IBM DB2) или возможностей, управляемых языковыми средствами системы (Oracle). Средства аудита обычно ассоциированы с экземпляром, т. е. для каждого экземпляра сервера баз данных может быть запущен собственный файл аудита.
-%
-%Средства аудита выполняют фиксацию информации об активности пользователей системе в словаре данных или специальном файле – журнале аудита. Информация о настройках системы аудита хранятся в специальном конфигурационном файле. Файл настройки или параметры команды активизации аудита определяют перечень событий, которые фиксируются системой аудита.
-%
-%Пользователь, обладающий необходимыми полномочиями, может выполнять следующие действия со средствами аудита:
-%\begin{itemize}
-%	\item запускать и останавливать средства аудита;
-%	\item просматривать состояние конфигурации средства аудита и настраивать средства аудита на фиксацию определенных событий;
-%	\item переписывать данные аудита во внешние файлы операционной системы для проведения независимого анализа.
-%\end{itemize}
+Мало того, что все это великолепие надо долго и скрупулезно настраивать, так еще и за всем этим надо следить. О том как мы опять же находим у \autocite{Smirnov2007}.
+\begin{grayquote}
+	Важнейшей составляющей процесса обеспечения безопасности ИС является проведение квалифицированного аудита. Проведение профессионального независимого аудита позволяет своевременно выявить существующие недостатки в системе обеспечения безопасности ИС и объективно оценить соответствие параметров, характеризующих режим обеспечения информационной безопасности, требуемому решаемыми задачами организации уровню.
+\end{grayquote}
+
+Полноценная система обеспечения безопаности ИС должна обладать развитыми средствами аудита, то есть, как минимум, СУБД должна обладать средствами автоматического ведения протоколов действий пользователей системы.
+
+В СУБД средство ведения аудита может быть реализовано в виде независимой утилиты (IBM DB2) или возможностей, управляемых языковыми средствами системы (Oracle). Средства аудита обычно ассоциированы с экземпляром, т. е. для каждого экземпляра сервера баз данных может быть запущен собственный файл аудита.
+
+Средства аудита выполняют фиксацию информации об активности пользователей системе в словаре данных или специальном файле – журнале аудита. Информация о настройках системы аудита хранятся в специальном конфигурационном файле. Файл настройки или параметры команды активизации аудита определяют перечень событий, которые фиксируются системой аудита.
+
+Пользователь, обладающий необходимыми полномочиями, может выполнять следующие действия со средствами аудита:
+\begin{itemize}
+	\item запускать и останавливать средства аудита;
+	\item просматривать состояние конфигурации средства аудита и настраивать средства аудита на фиксацию определенных событий;
+	\item переписывать данные аудита во внешние файлы операционной системы для проведения независимого анализа.
+\end{itemize}
 
 \subsubsection{Многоуровневая защита}
-%\begin{enumerate}
-%	\item Физическая защита
-%	\begin{enumerate}
-%		\item Прежде всего, необходима физическая защита информации: чтобы сервер с данными не был похищен. Для этого сервера располагают в охраняемом дата-центре с видеонаблюдением и ограниченным доступом лиц в эти помещения
-%		\item Второй уровень физической защиты — обеспечение сохранности самих данных, содержащихся на этих серверах. Этот вопрос решается применением политики резервного копирования информации
-%	\end{enumerate}
-%	\item Защита ОС: Различные средства от НСД и прочее.
-%	
-%	\item Защита на уровне передачи данных: Передача данных тоже нуждается в защите, поскольку существует вероятность перехвата информации в момент ее транзита. Шифрование траффика позволяет защитить данные системы от перехвата снифферами и т.п.
-%	
-%	\item Авторизация в системе: Различные виды идентификации и аутентификации.
-%	
-%	\item Система прав и объектов: Различные модели разграничения доступа.
-%\end{enumerate}
-%
-\subsubsection{Типы контроля безопасности: потоковый, контроль вывода, контроль доступа[None]}
+Мы уже успели поговорить про уровни в связке интерфейс-СУБД-ОП-среда [\ref{pon:urov}],  сеть-ОС-БД [\ref{pon:urovs}] и даже ФСТЭКовские уровни [\ref{pon:bez}].
+
+Самое полное описание, пожалуй, сеть-ОС-БД, так что дальше будем отталкиваться от него. Вполне очевидно что защищать все и сразу сложно, каждый уровень имеет свою специфику, но какие то общие принципы выделить можно. Так как все труды на эту тему каскадно ссылаются на \autocite{Smirnov2007}, то просто процитирую:
+\begin{grayquote}
+	Анализ наиболее успешных решений в области обеспе­чения информационной безопасности баз данных позволил сформулировать несколько полезных принципов, которыми можно руководствоваться при проектировании систем защиты:
+	\begin{itemize}
+		\item экономическая оправданность механизмов защиты
+		\item открытое проектирование
+		\item распределение полномочий между различными субъектами в соответствии с правилами организации
+		\item минимально возможные привилегии для пользователей и администраторов
+		\item управляемость системы при возникновении отказов и сбоев
+		\item психологическая приемлемость работы средств защиты данных
+	\end{itemize}
+\end{grayquote}
+
+\subsubsection{Типы контроля безопасности: потоковый, контроль вывода, контроль доступа}
+Про все три типа мы уже успели поговорить. В частности \ref{pon:pot} и \ref{pon:bez}. Единственное, что осталось уточнить -- это контроль доступа. Идейно он этот вопрос распадается на два: \textit{кому} и \textbf{что} мы будем разрешать?
+
+\paragraph{Кому?}
+
+Получение доступа к ресурсам информационной системы предусматривает выполнение трех процедур: идентификации, аутентификации и авторизации.
+
+Общепринято, что технологии идентификации и аутентификации являются обязательным элементом защищенных систем, так как обеспечивают аксиоматический принцип персонализации субъектов и, тем самым, реализуют первый (исходный) программ­но-технический рубеж защиты информации в компьютерных системах.
+
+Под идентификацией понимается различение субъектов, объектов, процессов по их моделям, существующим в форме имен. Под аутентификацией понимается проверка и подтверждение подлинности образа идентифицированного субъекта, объекта, процесса. Как вытекает из самой сути данных понятий, в основе тех­нологий идентификации и аутентификации лежит идеология вероятностного распознавания образов, обуславливая, соответственно, принципиальное наличие ошибок первого и второго рода. 
+\begin{enumerate}
+	\item Сущность процедуры идентификации состоит в назначении пользователю, т. е. объекту -- потребителю ресурсов сервера баз данных -- имени. Имя пользователя -- это некоторая уникальная метка, соответствующая принятым соглашениям именования и обеспечивающая однозначную идентификацию объекта реального мира в пространстве отображаемых объектов. С позиций ИС источники, предъявившие идентификатор, неразличимы.
+	\item Сущность процедуры аутентификации состоит в подтверждении подлинности пользователя, представившего идентификатор.
+	\item Сущность процедуры авторизации состоит в определении перечня конкретных информационных ресурсов, с которыми аутентифицированному пользователю разрешена работа.
+	
+\end{enumerate}
+Процедуры идентификации, аутентификации и авторизации являются обязательными для любой защищенной ИС.
+
+\paragraph{Что?}
+В целом используют одну из трех моделей безопасности: дискреционная, мандатная и ролевая.
+\begin{enumerate}
+	\item Простейшая (одноуровневая) модель безопасности данных строится на основе дискреционного (избирательного) принципа разграничения доступа, при котором доступ к объектам осуществляется на основе множества разрешенных отношений доступа в виде троек -- <<субъект доступа -- тип доступа -- объект доступа>>.
+	
+	Наглядным и распространенным способом формализованного представления дискреционного доступа является матрица доступа, устанавливающая перечень пользователей (субъектов) и перечень разрешенных операций (процессов) по отношению к каждому объекту базы данных (таблицы, запросы, формы, отчеты).
+	
+	\item Мандатная модель доступа характерна для случая, когда возможность конкретных действий с данными или документами определяется внешним, обычно глобальным собственником информации. Исторически в роли такого глобального собственника чаще всего выступало государство. Основная идея мандатной модели доступа состоит в приписывании объектам и субъектам доступа меток. Если метки объекта и субъекта соответствуют (в некотором смысле), то субъект получает право на выполнение определенных действий с объектом. В роли метки, приписываемой субъектам в государственных структурах, выступает, например, форма допуска. В реляционной модели в качестве структуры, обладающей меткой, естественно выбрать кортеж.
+	
+	\item В основу ролевой модели положена идея принадлежности всех данных системы некоторой организации, а не пользователю, как в случае моделей дискреционного и мандатного доступа. В целом модель ориентирована на упрощение и обеспечение формальной ясности в технологии обеспечения политики безопасности системы. Управление доступом в ролевой модели осуществляется как на основе матрицы прав доступа для ролей, так и с помощью правил, регламентирующих назначение ролей пользователям и их
+	активацию во время сеансов.
+	
+	В ролевой модели классическое понятие субъект разделяется на две части: пользователь и роль. Пользователь — это человек, работающий с системой и выполняющий определенные служебные обязанности. Роль -- это активно действующая в системе абстрактная сущность, с которой связан ограниченный, логически связанный набор привилегий, необходимых для осуществления определенной деятельности. (Самым распространенным примером роли явля­ется присутствующая почти в каждой системе учетная запись администратора (например, root для UNIX и Administrator для Windows), который обладает специальными полномочиями и может использоваться несколькими пользователями.
+	
+	Ролевая модель включает три компонента: модель отображения пользователь -- роль, модель отображения привилегия -- роль и модель отображения роль -- роль. Для упрощения логической структуры объектов управления вводится понятие иерархии ролей. Роль, входящая в иерархию, может включать другие роли, наследуя все привилегии включаемых
+	ролей.
+\end{enumerate}
