--- a/part/concept.tex
+++ b/part/concept.tex
@@ -312,7 +312,7 @@
 \end{enumerate}
 
 \subsubsection{Аудит}
-Мало того, что все это великолепие надо долго и скрупулезно настраивать, так еще и за всем этим надо следить. О том как, мы опять же находим у \autocite{Smirnov2007}.
+Мало того, что все это великолепие надо долго и скрупулезно настраивать, так еще и за всем этим надо следить. О том, как, мы, опять же, находим у \autocite{Smirnov2007}.
 \begin{grayquote}
 	Важнейшей составляющей процесса обеспечения безопасности ИС является проведение квалифицированного аудита. Проведение профессионального независимого аудита позволяет своевременно выявить существующие недостатки в системе обеспечения безопасности ИС и объективно оценить соответствие параметров, характеризующих режим обеспечения информационной безопасности, требуемому решаемыми задачами организации уровню.
 \end{grayquote}
