distribute: first two paragraphs

--- a/db.tex
+++ b/db.tex
@@ -17,10 +17,10 @@
 %\input{part/integrity}
 %\input{part/confidentiality}
 %\input{part/availability}
-%\input{part/distributed}
+\input{part/distributed}
 %\input{part/statistical}
 %\input{part/intrusion}
 %\input{part/security}
-\input{part/ref}
+%\input{part/ref}
 \printbibliography
 \end{document}
