--- a/part/concept.tex
+++ b/part/concept.tex
@@ -381,3 +381,4 @@
 	Ролевая модель включает три компонента: модель отображения пользователь -- роль, модель отображения привилегия -- роль и модель отображения роль -- роль. Для упрощения логической структуры объектов управления вводится понятие иерархии ролей. Роль, входящая в иерархию, может включать другие роли, наследуя все привилегии включаемых
 	ролей.
 \end{enumerate}
+\clearpage
