--- a/bibliography.bib
+++ b/bibliography.bib
@@ -45,3 +45,26 @@
     urldate = {2020-03-01},
     year={2011}
 }
+
+@online{Sergeeva,
+	author = {{Т.Ю.Сергеева, М.Ю.Сергеев}},
+	title = {{Распределенная обработка данных}},
+	url = {https://cchgeu.ru/upload/iblock/cf5/metod_roi_ivt_ras_24.06.2016.pdf},
+	urldate = {2020-04-20},
+	year = {2014}
+}
+
+@online{dce,
+	author = {{Бомонка}},
+	title = {{Распределенная обработка данных}},
+	url = {https://ru.bmstu.wiki/%D0%A0%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0_%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85},
+	urldate = {2020-04-20},
+	year = {2019}
+}
+
+@online{infosec,
+	author = {{В. Ю. Статьев, В.А. Тиньков}},
+	title = {{Информационная безопасность распределенных информационных систем}},
+	url = {http://emag.iis.ru/arc/infosoc/emag.nsf/BPA/9191949adeb83654c32575be0039f17c},
+	urldate = {2020-04-20}
+}
