--- a/part/concept.tex
+++ b/part/concept.tex
@@ -1,5 +1,5 @@
 \section{Концепция безопасности БД}
-%\footcite{Al2015}\textcite{Al2015}\nocite{Al2015}
+
 
 \subsubsection{Понятие безопасности БД}
 Для того чтобы иметь общую точку старта нам придется дать пару определений, я постараюсь быстро разобраться с обязательной копипастой и перейти к делу. Итак:
@@ -148,7 +148,7 @@
 
 Теперь спускаемся на уровень самой БД. Для простоты восприятия разобьем все кучкам угроз конфиденциальности, целостности и доступности(Опять же, согласно \autocite{Ytebov2008}):
 \begin{itemize}
-	\item К угрозам конфиденциальности информации можно отнести следующие~\label{ygr:conf}:
+	\item К угрозам конфиденциальности информации можно отнести следующие~\label{ugr:conf}:
 	\begin{enumerate}
 		\item Инъекция SQL. Во многих приложениях используется динамический SQL -- формирование SQL-предложений кодом программы путем конкатенации строк и значений параметров. Зная структуру базы данных, злоумышленник может либо выполнить хранимую программу в запросе, либо закомментировать <<легальные>> фрагменты SQL-кода, внедрив, например, конструкцию UNION, запрос которой возвращает конфиденциальные данные. В последнее время злоумышленник может использовать специальные программы, автоматизирующие процесс реализации подобных угроз.
 		
@@ -158,7 +158,7 @@
 		
 		\item Использование оператора UPDATE для получения конфиденциальной информации. В некоторых стандартах SQL пользователь, не обладая привилегией на выполнение оператора SELECT, мог выполнить оператор UPDATE со сложным логическим условием. Так как после выполнения оператора UPDATE сообщается, сколько строк он обработал, фактически пользователь мог узнать, существуют ли данные, удовлетворяющие этому условию.
 	\end{enumerate}
-	\item К угрозам  целостности информации, специфические для СУБД можно отнести следующие~\label{ygr:cel}:
+	\item К угрозам  целостности информации, специфические для СУБД можно отнести следующие~\label{ugr:cel}:
 	\begin{enumerate}
 		\item С помощью SQL-операторов UPDATE, INSERT и DELETE можно изменить данные в СУБД. Опасность заключается в том, что пользователь, обладающий соответствующими привилегиями, может модифицировать все записи в таблице.
 	\end{enumerate}
